--- a/web/css/design.css
+++ b/web/css/design.css
@@ -131,7 +131,9 @@ form input, form textarea {
 	margin-bottom:2px;
 }
 form input[type=checkbox] {
-	margin: 6px 0px
+	margin: 9px 0px;
+	width: 230px;
+	text-align: center;
 }
 form input[type=submit] {
 	border: 1px solid lightgrey;
@@ -153,6 +155,20 @@ form select {
 	background-color: #FCFCFC;
 	width: 232px;
 	padding: 5px;
+}
+form div:not([id]) {
+	clear:both;
+}
+form div[id*=time] {
+	margin-left: 194px;
+}
+form div[id*=time] select[id*=hour] {
+	width: 75px;
+	margin-right: 5px;
+}
+form div[id*=time] select[id*=minute] {
+	width: 75px;
+	margin-left: 5px;
 }
 form select[id*=day],
 form select[id*=month],
@@ -247,6 +263,12 @@ table.defaultTab th {
 	border-color: rgba(0,0,0,0.05);
 }
 
+table.cleanTab td, table.cleanTab th {
+	padding: 10px;
+}
+table.cleanTab th {
+	font-weight: bold;
+}
 
 /* Table Sorter
 -------------------------------------------------------------- */
