--- a/src/CoralScrum/MainBundle/Resources/views/Project/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/edit.html.twig
@@ -5,12 +5,8 @@
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('project') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+	{{ form(delete_form) }}
+
+	<a class="button" href="{{ path('project') }}">Back to Projects</a>
+	
 {% endblock %}
