--- a/src/CoralScrum/MainBundle/Resources/views/Project/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Project/new.html.twig
@@ -5,11 +5,5 @@
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('project') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+    <a class="button" href="{{ path('project') }}">Back to Projects</a>
 {% endblock %}
