--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
@@ -5,12 +5,8 @@
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('sprint') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+	{{ form(delete_form) }}
+	
+    <a class="button" href="{{ path('sprint', { 'projectId': projectId }) }}">Back to Sprints</a>
+
 {% endblock %}
