--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/new.html.twig
@@ -5,11 +5,6 @@
 
     {{ form(form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('sprint') }}">
-            Back to the list
-        </a>
-    </li>
-</ul>
+	<a class="button" href="{{ path('sprint', { 'projectId': projectId }) }}">Back to Sprints</a>
+
 {% endblock %}
