--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/show.html.twig
@@ -3,10 +3,10 @@
 {% block container -%}
     <h1>Sprint</h1>
 
-    <table class="record_properties cleanTab">
+    <table class="cleanTab">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
@@ -20,17 +20,8 @@
         </tbody>
     </table>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('sprint') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('sprint_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <a class="button" href="{{ path('sprint', { 'projectId': projectId }) }}">Back to Sprints</a>
+    <a class="button" href="{{ path('sprint_edit', { 'projectId': projectId, 'id': entity.id }) }}">Edit</a>
+    {{ form(delete_form) }}
+    
 {% endblock %}
