--- a/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Test/show.html.twig
@@ -3,10 +3,10 @@
 {% block container -%}
     <h1>Test</h1>
 
-    <table class="record_properties cleanTab">
+    <table class="cleanTab">
         <tbody>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <td>{{ entity.id }}</td>
             </tr>
             <tr>
@@ -36,17 +36,8 @@
         </tbody>
     </table>
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('test') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>
-        <a href="{{ path('test_edit', { 'id': entity.id }) }}">
-            Edit
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    <a class="button" href="{{ path('test', { 'projectId': projectId }) }}">Back to Tests</a>
+    <a class="button" href="{{ path('test_edit', { 'projectId': projectId, 'id': entity.id }) }}">Edit</a>
+    {{ form(delete_form) }}
+
 {% endblock %}
