--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/edit.html.twig
@@ -1,16 +1,16 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
+{% block menu %}
+    {% include "CoralScrumMainBundle:Main:menu.html.twig" %}
+{% endblock %}
+
 {% block container -%}
     <h1>UserStory edit</h1>
 
     {{ form(edit_form) }}
 
-        <ul class="record_actions">
-    <li>
-        <a href="{{ path('userstory') }}">
-            Back to the list
-        </a>
-    </li>
-    <li>{{ form(delete_form) }}</li>
-</ul>
+    {{ form(delete_form) }}
+    
+    <a class="button" href="{{ path('userstory', { 'projectId': projectId }) }}">Back to Backlog</a>
+
 {% endblock %}
