--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
@@ -1,51 +1,44 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
-{% block container -%}
-    <h1>UserStory list</h1>
+{% block menu %}
+    {% include "CoralScrumMainBundle:Main:menu.html.twig" %}
+{% endblock %}
 
-    <table class="records_list cleanTab">
+{% block container -%}
+    <h1>User Stories list</h1>
+
+    <a class="button" href="{{ path('userstory_new', { 'projectId': projectId }) }}">Create a new User Story</a>
+
+    <table class="defaultTab">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Priority</th>
                 <th>Difficulty</th>
-                <th>Isfinished</th>
-                <th>Isvalidated</th>
+                <th>Finished</th>
+                <th>Validated</th>
                 <th>Actions</th>
             </tr>
         </thead>
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('userstory_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('userstory_show', { 'projectId': projectId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.priority }}</td>
                 <td>{{ entity.difficulty }}</td>
-                <td>{{ entity.isFinished }}</td>
-                <td>{{ entity.isValidated }}</td>
+                <td>{{ entity.isFinished }} <img src="{{ asset('img/valid.png') }}" /></td>
+                <td>{{ entity.isValidated }} <img src="{{ asset('img/error.png') }}" /></td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('userstory_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('userstory_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                    <a class="edit" href="{{ path('userstory_edit', { 'projectId': projectId, 'id': entity.id }) }}"></a>
+                    <a class="delete" href=""></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('userstory_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
