--- a/web/css/design.css
+++ b/web/css/design.css
@@ -101,6 +101,9 @@ h5 {
 a {
 	color: #509BE5;
 }
+a:hover {
+	cursor: pointer;
+}
 
 input {
 	border: 1px solid #DEDEDE;
@@ -217,7 +220,7 @@ table.defaultTab {
 	/*border: 1px solid #fff;*/
 	/*background: #eee;*/
 	/*color: #444;*/
-	margin:20px 0px;
+	margin:10px 0px;
 	border: none !important;
 }
 
@@ -230,6 +233,7 @@ table.defaultTab td {
 
 table.defaultTab th {
 	font-weight: bold;
+	background: #2aa7d8;
 	background: linear-gradient(to top, #0e8dbd, #49c4f5);
 }
 table.defaultTab tr {
@@ -269,6 +273,14 @@ table.cleanTab td, table.cleanTab th {
 table.cleanTab th {
 	font-weight: bold;
 }
+table.cleanTab img, table.projectDetails th, table.projectDetails td {
+	vertical-align: middle;
+}
+table.projectDetails {
+	width: 200px;
+	background-color: #e0e0e0;
+	border: 1px solid #ccc;
+}
 
 /* Table Sorter
 -------------------------------------------------------------- */
@@ -288,31 +300,33 @@ table.tablesorter th {
 	padding-right:20px;
 }
 table.tablesorter thead tr {
+	background: #2aa7d8;
 	background: linear-gradient(to top, #0e8dbd, #49c4f5);
 }
 
 
 /* Buttons
 -------------------------------------------------------------- */
-a.button:hover,
-a.redButton:hover,
-a.greenButton:hover,
-a.orangeButton:hover,
-a.blueButton:hover ,
-a.violetButton:hover {
-	cursor: pointer;
-}
-
-a.button {
-	padding: 4px 7px;
-	background: linear-gradient(to top, #FFBC2D, #FFDE99);
-	border: 1px solid #EBAE41;
+a.button,
+a.redButton,
+a.greenButton,
+a.orangeButton,
+a.blueButton ,
+a.violetButton {
+	margin: 2px;
+	padding: 5px 7px 4px;
 	border-radius: 4px;
-	text-decoration: none;
 	color: black;
 	font-size: 11px;
 	font-weight: bold;
-	margin: 2px;
+	text-decoration: none;
+	display: inline-block;
+}
+
+a.button {
+	padding: 6px 7px 5px;
+	background: linear-gradient(to top, #FFBC2D, #FFDE99);
+	border: 1px solid #EBAE41;
 }
 a.button:active {
 	background: none;
@@ -320,30 +334,16 @@ a.button:active {
 }
 
 a.redButton {
-	padding: 4px 7px;
 	background: linear-gradient(to top, #DB6161, #FF9696);
 	border: 1px solid #CE3535;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 2px;
 }
 a.redButton:active {
 	background: #DB6161;
 }
 
 a.greenButton {
-	padding: 4px 7px;
 	background: linear-gradient(to top, #23BE61, #51EE83);
 	border: 1px solid #00941D;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 2px;
 }
 a.greenButton:active {
 	background: none;
@@ -351,15 +351,8 @@ a.greenButton:active {
 }
 
 a.blueButton {
-	padding: 4px 7px;
 	background: linear-gradient(to top, #39A2D3, #8ED6FF);
 	border: 1px solid #2F8DD6;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 2px;
 }
 a.blueButton:active {
 	background: none;
@@ -367,15 +360,8 @@ a.blueButton:active {
 }
 
 a.orangeButton {
-	padding: 4px 7px;
 	background: linear-gradient(to top, #F5AC4F, #FFDC9D);
 	border: 1px solid #CC8E1E;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 2px;
 }
 a.orangeButton:active {
 	background: none;
@@ -383,15 +369,8 @@ a.orangeButton:active {
 }
 
 a.violetButton {
-	padding: 4px 7px;
 	background: linear-gradient(to top, #C35EE6, #F39DFF);
 	border: 1px solid #AE30DA;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 2px;
 }
 a.violetButton:active {
 	background: none;
@@ -405,10 +384,6 @@ a.delete {
 	display: inline-block;
 	margin: 0px 4px;
 }
-a.edit:hover,
-a.delete:hover {
-	cursor: pointer;
-}
 a.edit {
 	background-image: url(./../img/edit.png)
 }
@@ -416,33 +391,13 @@ a.delete {
 	background-image: url(./../img/delete.png)
 }
 
-a.addButton {
-	padding: 5px 7px;
-	background: linear-gradient(to top, #FFBC2D, #FFDE99);
-	border: 1px solid #EBAE41;
-	border-radius: 4px;
-	text-decoration: none;
-	color: black;
-	font-size: 11px;
-	font-weight: bold;
-	margin: 10px 0px;
-	float:right;
-}
-a.addButton:hover {
-	cursor: pointer;
-}
-a.addButton:active {
-	background: none;
-	background-color: #FFBC2D;
-}
-
-
 
 /* Header
 -------------------------------------------------------------- */
 header {
 	width:100%;
 	height:80px;
+	background: #202020;
 	background: linear-gradient(to top, #1f1f1f, #404040);
 }
 
@@ -759,6 +714,7 @@ header div.infos span.notif {
 #mainContainer div.container {
 	width:1000px;
 	margin:auto;
+	margin-top: 10px;
 }
 
 
@@ -883,4 +839,11 @@ header div.infos span.notif {
 }
 #mainContainer ul.squareLi li a:hover {
 	background-color: #efefef;
+}
+
+#mainContainer ul.list {
+	text-align: left;
+}
+#mainContainer ul.list li {
+	margin: 5px;
 }
