Added awesome post-it view, updated controllers, database relation, forms and views

--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
@@ -1,5 +1,9 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
+{% block menu %}
+    {% include "CoralScrumMainBundle:Main:menu.html.twig" %}
+{% endblock %}
+
 {% block container -%}
     <h1>Sprint edit</h1>
 
