--- a/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
@@ -1,20 +1,26 @@
 {% extends "CoralScrumMainBundle::index.html.twig" %}
 
+{% block menu %}
+    {% include "CoralScrumMainBundle:Main:menu.html.twig" %}
+{% endblock %}
+
 {% block container -%}
     <h1>Task list</h1>
 
-    <table class="records_list cleanTab">
+    <a class="button" href="{{ path('task_new', { 'projectId': projectId }) }}">Create a new Task</a>
+
+    <table class="defaultTab">
         <thead>
             <tr>
-                <th>Id</th>
+                <th>ID</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Duration</th>
                 <th>State</th>
-                <th>Creationdate</th>
-                <th>Startdate</th>
-                <th>Enddate</th>
-                <th>Isbug</th>
+                <th>Creation Date</th>
+                <th>Start Date</th>
+                <th>End Date</th>
+                <th>Is Bug</th>
                 <th>Commit</th>
                 <th>Actions</th>
             </tr>
@@ -22,36 +28,22 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('task_show', { 'id': entity.id }) }}">{{ entity.id }}</a></td>
+                <td><a href="{{ path('task_show', { 'projectId': projectId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.duration }}</td>
                 <td>{{ entity.state }}</td>
-                <td>{% if entity.creationDate %}{{ entity.creationDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.startDate %}{{ entity.startDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{% if entity.endDate %}{{ entity.endDate|date('Y-m-d H:i:s') }}{% endif %}</td>
-                <td>{{ entity.isBug }}</td>
+                <td>{% if entity.creationDate %}{{ entity.creationDate|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if entity.startDate %}{{ entity.startDate|date('Y-m-d') }}{% endif %}</td>
+                <td>{% if entity.endDate %}{{ entity.endDate|date('Y-m-d') }}{% endif %}</td>
+                <td>{{ entity.isBug ? 'Yes' : 'No' }}</td>
                 <td>{{ entity.commit }}</td>
                 <td>
-                <ul>
-                    <li>
-                        <a href="{{ path('task_show', { 'id': entity.id }) }}">show</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('task_edit', { 'id': entity.id }) }}">edit</a>
-                    </li>
-                </ul>
+                    <a class="edit" href="{{ path('task_edit', { 'projectId': projectId, 'id': entity.id }) }}"></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-        <ul>
-        <li>
-            <a href="{{ path('task_new') }}">
-                Create a new entry
-            </a>
-        </li>
-    </ul>
     {% endblock %}
