--- a/src/CoralScrum/MainBundle/Resources/views/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/index.html.twig
@@ -32,10 +32,6 @@
 					<li><a href="{{ path('fos_user_security_login') }}">Log In</a></li>
 					<li><a href="{{ path('project') }}">View projects</a></li>
 				</ul>
-				
-				{#% include "CoralScrumMainBundle:Scrum:task.html.twig" %#}
-				{#% include "CoralScrumMainBundle:Scrum:sprint.html.twig" %#}
-				{#% include "CoralScrumMainBundle:Scrum:userstory.html.twig" %#}
 
 				{% endblock %}
 			</div>
@@ -50,10 +46,29 @@
 
 {% block javascripts %}
 	<script src="{{ asset('js/jquery-1.10.2.min.js') }}" type="text/javascript"></script>
+	<script src="{{ asset('js/jquery-ui-1.10.3.custom.min.js') }}" type="text/javascript"></script>
 	<script src="{{ asset('js/jquery.tablesorter.min.js') }}" type="text/javascript"></script>
 	<script>
 		$(document).ready(function() {
-			$(".tablesorter").tablesorter(); 
+			$(".tablesorter").tablesorter();
+			$( ".postIt" ).draggable({
+				containment: ".containment",
+				revert: 'invalid', 
+  				snap: ".droppable", 
+			});
+			$( ".droppable" ).droppable({
+				accept: ".postIt",
+				activeClass: "",
+				hoverClass: "bgHighlight",
+				drop: function( event, ui ) {
+					//$( this ).addClass( "bgHighlight" );
+					$(ui.helper).css({
+						'left': 'auto',
+						'top': 'auto'
+					});
+					$( this ).append( $(ui.helper) );
+				}
+			});
 		});
 	</script>
 {% endblock %}
