--- a/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Sprint/edit.html.twig
@@ -7,10 +7,26 @@
 {% block container -%}
     <h1>Sprint edit</h1>
 
-    {{ form(edit_form) }}
+    {{ form_start(edit_form) }}
 
-	{{ form(delete_form) }}
-	
+    <div>
+        {{ form_label(edit_form.startDate) }}
+        {{ form_errors(edit_form.startDate) }}
+        {{ form_widget(edit_form.startDate) }}
+    </div>
+    <div>
+        {{ form_label(edit_form.duration, 'Duration (days)') }}
+        {{ form_errors(edit_form.duration) }}
+        {{ form_widget(edit_form.duration) }}
+    </div>
+    <div>
+        <label for="coralscrum_mainbundle_sprint_userStory" class="required">User Stories<br><span class="hint">(Ctrl+click multiple-select)</span></label>
+        {{ form_errors(edit_form.userStory) }}
+        {{ form_widget(edit_form.userStory) }}
+    </div>
+
+    {{ form_end(edit_form) }}
+
     <a class="button" href="{{ path('sprint', { 'projectId': projectId }) }}">Back to Sprints</a>
 
 {% endblock %}
