--- a/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/index.html.twig
@@ -7,12 +7,13 @@
 {% block container -%}
     <h1>Task list</h1>
 
-    <a class="button" href="{{ path('task_new', { 'projectId': projectId }) }}">Create a new Task</a>
+    <a class="button" href="{{ path('task_new', { 'projectId': projectId, 'sprintId': sprintId }) }}">Create a new Task</a>
 
-    <table class="defaultTab">
+    <table class="defaultTab tablesorter">
         <thead>
             <tr>
                 <th>ID</th>
+                <th>User Story</th>
                 <th>Title</th>
                 <th>Description</th>
                 <th>Duration</th>
@@ -28,7 +29,8 @@
         <tbody>
         {% for entity in entities %}
             <tr>
-                <td><a href="{{ path('task_show', { 'projectId': projectId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
+                <td><a href="{{ path('task_show', { 'projectId': projectId, 'sprintId': sprintId, 'id': entity.id }) }}">#{{ entity.id }}</a></td>
+                <td><a href="{{ path('userstory_show', { 'projectId': projectId, 'id': entity.userstory.id }) }}">{{ entity.userstory }}</a></td>
                 <td>{{ entity.title }}</td>
                 <td>{{ entity.description }}</td>
                 <td>{{ entity.duration }}</td>
@@ -39,11 +41,23 @@
                 <td>{{ entity.isBug ? 'Yes' : 'No' }}</td>
                 <td>{{ entity.commit }}</td>
                 <td>
-                    <a class="edit" href="{{ path('task_edit', { 'projectId': projectId, 'id': entity.id }) }}"></a>
+                    <a class="edit" href="{{ path('task_edit', { 'projectId': projectId, 'sprintId': sprintId, 'id': entity.id }) }}"></a>
+                    <a class="delete" href=""></a>
                 </td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    {% endblock %}
+{% endblock %}
+
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/jquery.tablesorter.min.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function() {
+            $(".tablesorter").tablesorter();
+        });
+    </script>
+{% endblock %}
