--- a/src/CoralScrum/MainBundle/Resources/views/Task/new.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/Task/new.html.twig
@@ -68,6 +68,6 @@
     
     {{ form_end(form) }}
 
-    <a class="button" href="{{ path('task', { 'projectId': projectId }) }}">Back to the Sprint</a>
+    <a class="button" href="{{ path('task', { 'projectId': projectId, 'sprintId': sprintId }) }}">Back to the Sprint</a>
 
 {% endblock %}
