--- a/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
+++ b/src/CoralScrum/MainBundle/Resources/views/UserStory/index.html.twig
@@ -9,7 +9,7 @@
 
     <a class="button" href="{{ path('userstory_new', { 'projectId': projectId }) }}">Create a new User Story</a>
 
-    <table class="defaultTab">
+    <table class="defaultTab tablesorter">
         <thead>
             <tr>
                 <th>ID</th>
@@ -41,4 +41,14 @@
         </tbody>
     </table>
 
-    {% endblock %}
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script src="{{ asset('js/jquery.tablesorter.min.js') }}" type="text/javascript"></script>
+    <script>
+        $(document).ready(function() {
+            $(".tablesorter").tablesorter();
+        });
+    </script>
+{% endblock %}
